--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -149,7 +149,7 @@
 \input{chapters/relatedWork/relatedWorkVol5}
 \input{chapters/relatedWork/problemStatement}
 
-\chapter{The Proposed Method}
+\chapter{The Proposed System}
 \label{theModel}
 \input{chapters/model/model}
 \input{chapters/model/methodDescription}
