--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -93,7 +93,7 @@
 \section{Performance Comparison Results}
 \label{sec:performanceComparisonAppendix}
 
-For the route set representation, a two dimensional array is used. In the route set representation presented in Table \vref{table:routeSetRepr}, Route 1 starts from node 14, continues to node 10, and so on. The maximal numbers of nodes in a route, $R_{max}$, is sat to 8. Route 3 and Route 4 consists of less than 8 nodes. This happens because the ant has reached a node were there are no edges to walk without violating Constraint \vref{itm:constraintCycles}.
+%For the route set representation, a two dimensional array is used. In the route set representation presented in Table \vref{table:routeSetRepr}, Route 1 starts from node 14, continues to node 10, and so on. The maximal numbers of nodes in a route, $R_{max}$, is sat to 8. Route 3 and Route 4 consists of less than 8 nodes. This happens because the ant has reached a node were there are no edges to walk without violating Constraint \vref{itm:constraintCycles}.
 
 %Best Ants Route: {[14,13,11,10,8,6,15,7,][1,2,3,6,8,10,11,12,][14,10,8,6,4,5,2,3,][9,15,7,10,11,12,4,2,]}
 %\begin{table}[H]
@@ -147,7 +147,7 @@ For the route set representation, a two dimensional array is used. In the route 
     CSS Standard Deviation & 2.66 & 2.70 & 0.84 & - & 0.18\\
     \hline
     \end{tabular}
-    \caption {Comparing the route sets of ACO and ACO, having four routes, all results}
+    \caption {Comparing the route sets of ACO and CSS, having four routes, all results}
    % 100 Monte Carlo runs
     \label{table:performanceComparison_ACOFull}
     \end{table}
