--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -438,6 +438,7 @@
 }
 
 @misc{website:maven,
+    author="Maven",
     title = "Apache Maven",
     howpublished = "\url{https://maven.apache.org/}",
     year = "2015", 
