--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -1,7 +1,7 @@
 \chapter{Experimental Results}
 \label{appendixC}
 
-\section{Parameter Settings Results}
+\section{Parameter settings results}
 %VOL 1 testing:
 
 %SIDEWAYS
@@ -90,7 +90,7 @@
 \end{table}
 
 
-\section{Performance Comparison Results}
+\section{Performance comparison results}
 \label{sec:performanceComparisonAppendix}
 
 %For the route set representation, a two dimensional array is used. In the route set representation presented in Table \vref{table:routeSetRepr}, Route 1 starts from node 14, continues to node 10, and so on. The maximal numbers of nodes in a route, $R_{max}$, is sat to 8. Route 3 and Route 4 consists of less than 8 nodes. This happens because the ant has reached a node were there are no edges to walk without violating Constraint \vref{itm:constraintCycles}.
