--- a/thesis/appendices/protocol/finalprotocol.tex
+++ b/thesis/appendices/protocol/finalprotocol.tex
@@ -6,9 +6,9 @@
 %TODO: The final protocol with the final search term and justifications.
 %vref: https://raw.githubusercontent.com/kenborge/slr-scbw/master/subsections/protocol.tex
 
-\subsection{Defining the Problem}
+\subsection{Defining the problem}
 \label{sec:researchQSLR}
-To conduct a structured literature review it is vital to decide the problem, $P$, to be solved and the constraints, $C$, used to guide the search.
+To conduct a structured literature review it is vital to decide the problem, $P$, to be solved, and some constraints, $C$, to guide the search.
 
 One of the goals for the environment package for transportation in Trondheim, ``Greener Trondheim'', is to improve the public transportation system \citep{website:miljopakken}. From a meeting with AtB\citep{website:atb} we learned that the bus network in Trondheim never has been computational optimized, and the existing solution is purely based on experience. The problem formulation for this thesis was therefore based on the idea to improve todays solution by optimizing the bus routes using AI-methods. 
 
@@ -21,7 +21,7 @@ One of the goals for the environment package for transportation in Trondheim, ``
     \end{enumerate}
 \end{itemize}
 
-\textbf{Drawn to the following research question:}
+\textbf{The problem and constraints is drawn to the following research question:}
 %\begin{enumerate}
 %\item What are the existing solutions to this problem?
 %\item Which swarm intelligence methods is best suited for optimizing? 
@@ -29,22 +29,19 @@ One of the goals for the environment package for transportation in Trondheim, ``
 %\item Does this solution help optimize the bus routes? 
 %\end{enumerate}
 
-\begin{enumerate}[label=\textbf{\arabic*})]
-\item 
-    \begin{enumerate}
-    \item[RQ 1:] What is the state-of-the-art in solving vehicle routing problems using swarm intelligence methods and graph databases?
-    \end{enumerate}
-\end{enumerate}
+
+\subsubsection*{RQ 1: What is the state-of-the-art in solving vehicle routing problems using swarm intelligence methods and graph databases?}
+
 
 \subsection{Search Terms}
 \label{sec:searchTerms}
 Search terms were decided based on the defined research question, and formed into groups of synonyms:
 \begin{itemize}
 \item Group 1: Train, plane, bus, delivery
-\item Group 2: Path optimization, Scheduling Optimization, Route Optimization, Planning, Multimodal
+\item Group 2: Path optimization, Scheduling optimization, Route optimization, Planning, Multimodal
 \item Group 3: Bee colony optimization, Particle swarm optimization, Swarm intelligence, Ant colony optimization, BCO, PSO, ACO
 \item Group 4: Transit, Transportation, Traffic, Vehicle
-\item Group 5: Artificial Intelligence, ai, Machine Learning
+\item Group 5: Artificial intelligence, AI, Machine learning
 \item Group 6: Multi-agent
 \item Group 7: Routing
 \item Group 8: Neo4j, Graph database
@@ -90,12 +87,12 @@ The search terms and the groups of synonyms were assembled into a complete searc
 
 \subsection{Inclusion Criteria}
 \label{sec:inclusionCriteria}
-The list of sources for retrieving relevant literature with the corresponding results is found in Section \vref{sec:searchEngines}. To exclude irrelevant literature, some inclusion criterias were decided to ensure a level of relevance to the very first pool. First of all, duplicate literature, book of chapters, book of abstracts, book of references, literature not written in english, books, and literature with cleary irrelevant titles (for example literature from different research areas) were removed based on title. After that, we decided to filter out relevant literature based on the abstracts. Because we had relatively many sources to related literature after the initial filtering (367), we decided that we wanted the abstracts (or the keyword subsection) to explicitly mention swarm intelligence or algorithms associated with swarm intelligence, while it also described a problem connected to vehicle routing. For our literature review we decided to use the inclusion criterias solely on the title, abstract and keywords. After a discussion and reading a few abstracts we landed on the following inclusion criterias:
+The list of sources for retrieving relevant literature with the corresponding results is found in Section \vref{sec:searchEngines}. To exclude irrelevant literature, some inclusion criteria were decided to ensure a level of relevance to the very first pool. First of all, duplicate literature, book of chapters, book of abstracts, book of references, literature not written in English, books, and literature with clearly irrelevant titles (for example literature from different research areas) were removed based on title. After that, we decided to filter out relevant literature based on the abstracts. Because we had relatively many sources to related literature after the initial filtering (367), we decided that we wanted the abstracts (or the keyword subsection) to explicitly mention swarm intelligence or algorithms associated with swarm intelligence, while it also described a problem connected to vehicle routing. For our literature review, we decided to use the inclusion criteria solely on the title, abstract, and keywords. After a discussion and reading a few abstracts we landed on the following inclusion criteria:
 \begin{itemize}
 \item The main concern is route optimization focusing on vehicles. 
 \item The study focuses on the use of swarm intelligence.
 \item The literature must contain an abstract. 
-\item The literature must still excist (some literature were removed from its original source).
+\item The literature must still exist (some literature were removed from its original source).
 \item The literature must be free of charge.
 \end{itemize}
 
@@ -110,21 +107,21 @@ The Quality Criteria was determined to ensure quality in the final papers and to
 \item \label{itm:qa1b}Is swarm intelligence the main optimization method? 
 \end{enumerate}
 \item Is there is a clear statement of the aim of the research?
-\item Is the study put into context of other studies and research?
-\item Are system of algoritmic design decisions justified?
+\item Is the study put into a context of other studies and research?
+\item Is a system of algorithmic design decisions justified?
 \item Is the test data set reproducible?
 \item Is the study algorithm reproducible?
 \item Is the experimental procedure thoroughly explained and reproducible?
-\item Is it cleary stated in the study which other algorithms the study`s algorithm(s) have been compared with?
+\item Is it clearly stated which algorithms their proposed algorithm is compared to?
 \item Are the performance metrics used in the study explained and justified?
-\item Are the test results thorougly analysed?
+\item Are the test results thoroughly analyzed?
 \item Does the test evidence support the findings presented?
 \item Has the architecture been implemented (and published)?
-\item Is the amount/quality of citation satisfactory? ($<$ $\frac{1}{3}$  self-citation and $>$ 10 citations)
+\item Is the amount / quality of citation satisfactory? ($<$ $\frac{1}{3}$  self-citation and $>$ 10 citations)
 \end{enumerate}
 
 \subsubsection{Scoring}
-Point 1-13 was given a score, with the granularity of 0 (no), $\frac{1}{2}$ (partly), and 1 (yes). For this structured literature review we wanted to emphasize on the quality criteria that covered the relevance. For retrieving the most relevant papers based on the content and not just the quality of the paper, Quality Criteria \vref{itm:qa1a} and \vref{itm:qa1b} was multiplied by 3. Table \vref{table:literature} shows the papers that were read and scored according to the quality criteria: 
+Point 1-13 was given a score, with the granularity of 0 (no), $\frac{1}{2}$ (partly), and 1 (yes). For this structured literature review, we wanted to emphasize on the quality criteria that covered the relevance. For retrieving the most relevant papers based on the content and not just the quality of the paper, Quality Criteria \vref{itm:qa1a} and \vref{itm:qa1b} was multiplied by 3. Table \vref{table:literature} shows the papers that were read and scored according to the quality criteria: 
 
 \begin{sidewaystable}
     %\hspace*{-0.5cm}
@@ -179,7 +176,7 @@ Point 1-13 was given a score, with the granularity of 0 (no), $\frac{1}{2}$ (par
 \end{sidewaystable}
 
 \subsection{Selecting the final literature}
-When selecting the final literature we decided to do this solely based on the quality criteria scores. The average score of the read literature was 12.95 $\approx$ 13. We decided that literature given a score $\geq{1.5}$ above average were selected. After this sorting we ended up with 11 final literature. These 11 literature are going to create the foundation of our thesis. Table \ref{table:finalliterature} shows the selected literature. 
+When selecting the final literature, we decided to do this solely based on the quality criteria scores. The average score of the read literature was 12.95 $\approx$ 13. We decided that literature given a score of 1.5 above average were selected. After this sorting, we ended up with 11 final literature. These 11 literature are going to create the foundation of our thesis. Table \ref{table:finalliterature} shows the selected literature. 
 
 \begin{table}[!htb]
     {
@@ -202,5 +199,5 @@ When selecting the final literature we decided to do this solely based on the qu
     \end{tabular}
     \end{center}
     } 
-\caption{Final literature}\label{table:finalliterature}
+\caption{Final selected literature}\label{table:finalliterature}
 \end{table}
