Report with out hyperref colors

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -9,8 +9,8 @@
 \usepackage{graphicx}							% To include graphics
 \usepackage{natbib}								% Correct citations
 %\usepackage{fancyheadings}						% Nice header and footer
-\usepackage[linktocpage,colorlinks]{hyperref}   % PDF hyperlink
-%\usepackage[linktocpage]{hyperref}				% LINKS WITHOUT COLOURS
+%\usepackage[linktocpage,colorlinks]{hyperref}   % PDF hyperlink
+\usepackage[linktocpage]{hyperref}				% LINKS WITHOUT COLOURS
 %\usepackage{geometry} 							% Better geometry
 \usepackage{import}
 \usepackage[toc,page]{appendix}
