--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -111,6 +111,9 @@
 \section*{Abstract}
 \input{chapters/abstract}
 \clearpage
+\section*{Sammendrag}
+\input{chapters/sammendrag}
+\clearpage
 \section*{Preface}
 \input{chapters/preface}
 \clearpage
