--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -31,7 +31,7 @@
     ~ & 50 & 50 & \textbf{90\%} & 104.252 $\pm$ 2.667 & 7.452 & 85.033 & 116.634\\
     \hline
     \end{tabular}
-    \caption {Steps with the corresponding results from the parameter settings experiment}
+    \caption {Steps with the corresponding results from the parameter settings experiment (parameter $s$, $i$ and $E$)}
     \tiny
     \begin{itemize}[noitemsep]
     \item[$^1$ :] Confidence Interval of Total Fitness (confidence level: 95\%)
@@ -147,7 +147,7 @@
     CSS Standard Deviation & 2.66 & 2.70 & 0.84 & - & 0.18\\
     \hline
     \end{tabular}
-    \caption {Comparing the route sets of ACO and CSS, having four routes, all results}
+    \caption {Comparing the route sets of ACO and CSS, having four routes (all results)}
    % 100 Monte Carlo runs
     \label{table:performanceComparison_ACOFull}
     \end{table}
