--- a/thesis/appendices/inputData.tex
+++ b/thesis/appendices/inputData.tex
@@ -32,7 +32,7 @@ The file presented in Table \vref{table:MandlCoords}, includes 16 lines, with a 
     	\hline
         \end{tabular}
     \end{center}
-    \caption {Coordinates for Mandl's transit network}
+    \caption {Coordinates for Mandl's Network}
     \label{table:MandlCoords}
 \end{table}
 
@@ -64,7 +64,7 @@ Table \vref{table:MandlTravelTimes} shows the content of the travel time file. T
      \hline
     \end{tabular}
 }
-    \caption {Travel times for Mandl's transit network}
+    \caption {Travel times for Mandl's Network}
     \label{table:MandlTravelTimes}
 \end{table}
 
@@ -98,7 +98,7 @@ Table \vref{table:MandlDemand} presents the demand file. The demand matrix in th
     \hline
     \end{tabular}
     }
- 	\caption {Demand for Mandl's transit network}
+ 	\caption {Demand for Mandl's Network}
  	\label{table:MandlDemand}
  	
 \end{table}
