--- a/thesis/appendices/protocol/finalprotocol.tex
+++ b/thesis/appendices/protocol/finalprotocol.tex
@@ -10,7 +10,7 @@
 \label{sec:researchQSLR}
 To conduct a structured literature review it is vital to decide the problem, $P$, to be solved, and some constraints, $C$, to guide the search.
 
-One of the goals for the environment package for transportation in Trondheim, ``Greener Trondheim'', is to improve the public transportation system \citep{website:miljopakken}. From a meeting with AtB\citep{website:atb} we learned that the bus network in Trondheim never has been computational optimized, and the existing solution is purely based on experience. The problem formulation for this thesis was therefore based on the idea to improve todays solution by optimizing the bus routes using AI-methods. 
+One of the goals for the environment package for transportation in Trondheim, ``Greener Trondheim'', is to improve the public transportation system \citep{website:miljopakken}. From a meeting with AtB \citep{website:atb} we learned that the bus network in Trondheim never has been computational optimized, and the existing solution is purely based on experience. The problem formulation for this thesis was therefore based on the idea to improve todays solution by optimizing the bus routes using AI-methods. 
 
 \begin{itemize}
 \item \textbf{P:} Optimizing the bus routes in Trondheim using AI-methods. % This problem can be characterized as a \textit{General Pickup and Delivery Problem (GPDP)} \citep[p.22-25]{vehiclerouting}.  
@@ -33,7 +33,7 @@ One of the goals for the environment package for transportation in Trondheim, ``
 \subsubsection*{RQ 1: What is the state-of-the-art in solving vehicle routing problems using swarm intelligence methods and graph databases?}
 
 
-\subsection{Search Terms}
+\subsection{Search terms}
 \label{sec:searchTerms}
 Search terms were decided based on the defined research question, and formed into groups of synonyms:
 \begin{itemize}
@@ -71,7 +71,7 @@ Search terms were decided based on the defined research question, and formed int
     %\label{table:searchterms}
 %\end{sidewaystable}
 
-\subsection{Complete Search Term}
+\subsection{Complete search term}
 \label{searchterm}
 The search terms and the groups of synonyms were assembled into a complete search term:
 \newline
@@ -85,7 +85,7 @@ The search terms and the groups of synonyms were assembled into a complete searc
 %Todo: Skrive om Zotero
 
 
-\subsection{Inclusion Criteria}
+\subsection{Inclusion criteria}
 \label{sec:inclusionCriteria}
 The list of sources for retrieving relevant literature with the corresponding results is found in Section \vref{sec:searchEngines}. To exclude irrelevant literature, some inclusion criteria were decided to ensure a level of relevance to the very first pool. First of all, duplicate literature, book of chapters, book of abstracts, book of references, literature not written in English, books, and literature with clearly irrelevant titles (for example literature from different research areas) were removed based on title. After that, we decided to filter out relevant literature based on the abstracts. Because we had relatively many sources to related literature after the initial filtering (367), we decided that we wanted the abstracts (or the keyword subsection) to explicitly mention swarm intelligence or algorithms associated with swarm intelligence, while it also described a problem connected to vehicle routing. For our literature review, we decided to use the inclusion criteria solely on the title, abstract, and keywords. After a discussion and reading a few abstracts we landed on the following inclusion criteria:
 \begin{itemize}
@@ -98,7 +98,7 @@ The list of sources for retrieving relevant literature with the corresponding re
 
 After the inclusion criteria filtering, we had 42 sources to related literature, including scientific papers and master theses. 
 
-\subsection{Quality Criteria} 
+\subsection{Quality criteria} 
 The Quality Criteria was determined to ensure quality in the final papers and to filter away studies not theoretical relevant for our thesis, and are the following:
 \begin{enumerate}
 \item \label{itm:qa1}How relevant is it?
