--- a/thesis/appendices/protocol/searchenginesvol2.tex
+++ b/thesis/appendices/protocol/searchenginesvol2.tex
@@ -1,8 +1,8 @@
-\section{Search Engines and Search Strings}
+\section{Search engines and search strings}
 \label{sec:searchEngines}
 %TODO: Write about the different what kind of results the different search engines gave with differet search terms. (With and without graph database)
 %Ref: https://raw.githubusercontent.com/sandsmark/slr-scbw/master/subsections/search_engines.tex
-In this structured literature review, we decided to search in seven different search engines. The process of deciding which search engines to use was strongly influenced by the suggestions in \citep{kofod2014}. The complete search term, described in Section \vref{searchterm}, is built on terms from seven different groups. In addition to the search of the complete search, a search consisting of one additional group (group 8) was conducted in each of the different search engines. Group 8 consists of the words ``neo4j'' and ``graph database''. This additional search was done to investigate if the combination of swarm technology and graph databases to solve a route optimization problem already had been studied. The results from our search show that our search term combined with ``neo4j'' or ``graph database'' gave zero findings.  
+In this structured literature review, we decided to search in seven different search engines. The process of deciding which search engines to use was strongly influenced by the suggestions in \citet{kofod2014}. The complete search term, described in Section \vref{searchterm}, is built on terms from seven different groups. In addition to the search of the complete search, a search consisting of one additional group (group 8) was conducted in each of the different search engines. Group 8 consists of the words ``neo4j'' and ``graph database''. This additional search was done to investigate if the combination of swarm technology and graph databases to solve a route optimization problem already had been studied. The results from our search show that our search term combined with ``neo4j'' or ``graph database'' gave zero findings.  
 
 
 \subsection{ACM Digital Library}
