--- a/thesis/appendices/protocol/finalprotocol.tex
+++ b/thesis/appendices/protocol/finalprotocol.tex
@@ -172,7 +172,7 @@ Point 1-13 was given a score, with the granularity of 0 (no), $\frac{1}{2}$ (par
         \textit{``Transportation Modeling: An Artificial Life Approach''} &1.5&3&1&0.5&0.5&0&0.5&0.5&0.5&0.5&0.5&1&0.5&1&11.5 \\ \hline
         \textit{``Transport Modeling by Multi-Agent Systems: A Swarm Intelligence Approach''}&3&3&0.5&0.5&0.5&0&0&0&0.5&0&0&0&0&1&9 \\ \hline
     \end{tabular}
-\caption{Quality Criteria Scoring}\label{table:literature}
+\caption{Quality criteria scoring}\label{table:literature}
 \end{sidewaystable}
 
 \subsection{Selecting the final literature}
