--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,14 @@
+@unpublished{kitchenham07,
+    author  = "B. A. Kitchenham",
+    title   = "Guidelines for performing Systematic Literature Reviews in
+    Software Engineering ",
+    school = "Keele University and University of Durham",
+    year   = "2007",
+    month  = "July",
+    note    = "\url{https://www.cs.auckland.ac.nz/~norsaremah/2007%20Guidelines%20for%20performing%20SLR%20in%20SE%20v2.3.pdf}",
+}
+
+
 @article{stutzle06,
     author    = "Thomas Stützle and Holger H. Hoos",
     title     = "MAX–MIN Ant System",
